# experimental-ogl

./: CMakeLists.txt  Main.cpp  build-run.sh
assets/shaders/: color.frag  color.vert  texture.frag  texture.vert
mgl/include/mgl/: Camera.hpp  GLSLProgram.hpp  Model.hpp
mgl/source/: Camera.cpp  GLSLProgram.cpp
